<resources>
    <string name="app_name">Cric Fantasy</string>
    <string name="select_match">Select Match</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fetch_text">Fetch selected match data</string>
    <string name="search_player_button_text">Search Player</string>
    <string name="clear_text">Clear</string>
    <string name="connection_error">Connection Error</string>
    <string name="squad">Squad</string>
    <string name="add_match">Add Match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_squad_text">Your Squad</string>
    <string name="calculate_points">Calculate points</string>
    <string name="show_fantasy_points">Show Fantasy Points</string>
    <string name="save_points_to_firebase">Save Points to Firebase </string>
    <string name="select_match_label">Select Match below</string>
    <string name="select_team_label">Select team below</string>
    <string name="select_team">Select Team</string>
    <string name="total_points_text">Total Fantasy Points</string>
    <string name="search_player_text">Search Player</string>
    <string name="AddMatch">Add Match</string>
    <string name="fantasy_points">Fantasy Points</string>
</resources>