<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ringpi.cric.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ringpi.cric.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ringpi.cric.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
    android:id="@+id/nav_squad"
    android:name="com.ringpi.cric.squad.SquadActivity"
    android:label="@string/squad"
    tools:layout="@layout/activity_squad"
    />
    <activity
        android:id="@+id/nav_addmatch"
        android:name="com.ringpi.cric.networkconnect.AddMatchActivity"
        android:label="@string/add_match"
        tools:layout="@layout/sample_main"
        />
    <activity
        android:id="@+id/nav_addplayer"
        android:name="com.ringpi.cric.AddPlayer.AddPlayerActivity"
        android:label="Add Player"
        tools:layout="@layout/activity_add_player"
        />

</navigation>